@@ -1,6 +1,8 @@
 package com.projarc.clean.application.usecase;
 
+import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -14,12 +16,13 @@ public class ListarTodosClientesUC {
     private ClienteService clienteService;
 
     @Autowired
-    public void setClienteService(ClienteService clienteService) {
+    public ListarTodosClientesUC(ClienteService clienteService) {
         this.clienteService = clienteService;
     }
 
-    public List<ClienteDTO> run() {
-        return clienteService.listaTodosClientes().stream().map(c -> ClienteDTO.fromModel(c)).toList();
+    public Collection<ClienteDTO> run() {
+        return clienteService.listaTodosClientes().stream().map(ClienteDTO::fromModel)
+                .collect(Collectors.toList());
     }
 
 }
